# legendary

./: README.md  pyproject.toml  requirements.txt  setup.py  zipapp_main.py
.github/workflows/: build-base.yml  lint-ruff.yml  python.yml  release.yml
legendary/: __init__.py  cli.py  core.py
legendary/api/: egs.py  lgd.py
legendary/downloader/mp/: manager.py  workers.py
legendary/lfs/: crossover.py  egl.py  eos.py  lgndry.py  utils.py  wine_helpers.py
legendary/models/: chunk.py  downloading.py  egl.py  exceptions.py  game.py  gql.py  json_manifest.py  manifest.py
legendary/utils/: aliasing.py  cli.py  egl_crypt.py  game_workarounds.py  savegame_helper.py  selective_dl.py  webview_login.py
